News
====

1.1.1 (unreleased)
------------------

- sh.rm: ensure that only symlinks are deleted (not the entire dir)
- sh.rm: remove symlinks as well (`PyPM Bug #89540
  <http://bugs.activestate.com/show_bug.cgi?id=89540>`_)
- #12: sh.RunError now handles non-ascii stdout/stderr

1.1.0
-----

*Release date: 20-December-2010*

- applib now depends on  appdirs and six
- #1: Deprecate applib.base.Locations and applib.locations in favour of
  'appdirs'
- #3: sh.unpack now ensures single top-level directory
- #4: Stop using `unicode` (py3k); applib now depends on the `six` package
- #5: Stop using `raw_input` (py3k)
- #6: Progress Bar prints delay with proper precision on py3k
- textui: Progress Bar shows ETA
- #8: progressbar prints floats as delay on py3k
- textui: ProgressBar.iterate clean-ups output if there is an exception/break
- textui: ProgressBar.iterate(post='...') to print post message after progress
- compression: Workaround zipfile bug with long paths on Windows (issue10447)
- proc: make ``sh.run`` accept ``cmd`` as a list of arguments
- _simpledb: force PickeType to use protocol 2. `PyPM Bug #88882
  <http://bugs.activestate.com/show_bug.cgi?id=88882>`_
- textui: Make `colprint` not prune columns when stdout is not a terminal

1.0.1
-----

*Release date: 23-July-2010*

- applib.log: support for specifying the default verbosity level

1.0.0
-----

*Release date: 29-Jun-2010*

- bb #1: Broken pipe error when breaking `less` 

1.0.0c10
--------

*Release date: 27-May-2010*

- More Python3 related fixes

1.0.0c9
-------

*Release date: 25-May-2010*

- Fixed ``UnboundLocalError`` with 'sys' in _cmdln.py#L1190

1.0.0c8
-------

*Release date: 28-Apr-2010*

- Fixed ``sys.exc_info`` related Python3 port

1.0.0c7
-------

*Release date: 28-Apr-2010*

- Updated applib._cmdln with cmdln:^/branches/cfg

1.0.0c6
-------

*Release date: 28-Apr-2010*

- Fixed more modules supporting Python 3

1.0.0c5
-------

*Release date: 28-Apr-2010*

- Python 3 support

1.0.0c4